--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@babel/core": "^7.22.1",
     "@babel/eslint-parser": "^7.21.8",
     "@babel/plugin-syntax-jsx": "^7.21.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
     "@babel/preset-react": "^7.22.3",
     "@testing-library/react": "^14.0.0",
     "eslint": "^7.32.0",
